Some white space length issue between username and time in comments fixed. Was different when rendered by php and js. Author link in comments actually takes you somewhere.

--- a/resources/css/camagru.css
+++ b/resources/css/camagru.css
@@ -953,6 +953,7 @@ img.perfect-box {
     font-weight:        bold;
     text-decoration:    none;
     color:              #2C3E50;
+    cursor:             pointer;
 
     -moz-transform:     color 0.3s;
     -webkit-transition: color 0.3s;
